
Features
--------

* Added `set_hostname` option to UdpInput configuration (#1668).

* Added `linux_netdev` and `linux_netstat` decoders (#1712).

* Improved error output for ElasticSearchOutput HTTP failures.

* Added `log_decode_failures` config value to decoders.

* Adder `log_flags` to hekad config, to control the prefix for STDOUT and
  STDERR logs.


Bug Handling
------------

* Fixed config error where global `max_pack_idle` setting was the wrong type
  and was being ignored (#1778).

* Fixed race condition in InputRunner's default deliverer initialization.

* Set hostname correctly in the Graylog decoder (#1663).

* Add sample rate support for gauge type in StatsdInput.

* Fixed some cases where SandboxDecoder wasn't correctly setting
  `pack.TrustMsgBytes` to false when needed.

* Fixed broken queue rolling and added test.

* Force ElasticSearch index name to lower case, as required by ElasticSearch.

* Fixed default buffer config values.

* Updated docker configuration so docker build works again (#1634).

* Add generic json lua sandbox decoder (#1651).

* Fixed bug where a SandboxInput configured with a `ticker_interval` would
  get stuck in an infinite loop on shutdown (#1705).

* Fixed race condition in the BufferReader's queue file lookup code (#1639).

* Changes in StatAccumInput, FileOutput, TcpInput, ProcessDirectoryInput tests
  to minimize intermittent Travis failures.

* Ensure the response is read until it is complete in the HttpOutput plugin.
  Previously, the deferred Body.Close() may have been called on incomplete
  responses. This resulted in the connections not returning to the client's
  Transport connection pool.

* Fixed panic that was occurring when loading a config file or directory that
  exists but which registers no plugins (#1597).

* Fixed bug where LogStreamerInput would sometimes loop infinitely reading the
  same file over and over when reading gzipped log files.

0.10.0b1 (2015-08-07)
=====================
